--- a/admin/tables.html
+++ b/admin/tables.html
@@ -43,7 +43,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">SB Admin</a>
+                <a class="navbar-brand" href="index.php">SB Admin</a>
             </div>
             <!-- Top Menu Items -->
             <ul class="nav navbar-right top-nav">
@@ -150,7 +150,7 @@
             <div class="collapse navbar-collapse navbar-ex1-collapse">
                 <ul class="nav navbar-nav side-nav">
                     <li>
-                        <a href="index.html"><i class="fa fa-fw fa-dashboard"></i> Dashboard</a>
+                        <a href="index.php"><i class="fa fa-fw fa-dashboard"></i> Dashboard</a>
                     </li>
                     <li>
                         <a href="charts.html"><i class="fa fa-fw fa-bar-chart-o"></i> Charts</a>
@@ -201,7 +201,7 @@
                         </h1>
                         <ol class="breadcrumb">
                             <li>
-                                <i class="fa fa-dashboard"></i>  <a href="index.html">Dashboard</a>
+                                <i class="fa fa-dashboard"></i>  <a href="index.php">Dashboard</a>
                             </li>
                             <li class="active">
                                 <i class="fa fa-table"></i> Tables
@@ -226,7 +226,7 @@
                                 </thead>
                                 <tbody>
                                     <tr>
-                                        <td>/index.html</td>
+                                        <td>/index.php</td>
                                         <td>1265</td>
                                         <td>32.3%</td>
                                         <td>$321.33</td>
@@ -285,7 +285,7 @@
                                 </thead>
                                 <tbody>
                                     <tr>
-                                        <td>/index.html</td>
+                                        <td>/index.php</td>
                                         <td>1265</td>
                                         <td>32.3%</td>
                                         <td>$321.33</td>
@@ -348,7 +348,7 @@
                                 </thead>
                                 <tbody>
                                     <tr>
-                                        <td>/index.html</td>
+                                        <td>/index.php</td>
                                         <td>1265</td>
                                         <td>32.3%</td>
                                         <td>$321.33</td>
@@ -407,7 +407,7 @@
                                 </thead>
                                 <tbody>
                                     <tr>
-                                        <td>/index.html</td>
+                                        <td>/index.php</td>
                                         <td>1265</td>
                                         <td>32.3%</td>
                                         <td>$321.33</td>
@@ -470,7 +470,7 @@
                                 </thead>
                                 <tbody>
                                     <tr class="active">
-                                        <td>/index.html</td>
+                                        <td>/index.php</td>
                                         <td>1265</td>
                                         <td>32.3%</td>
                                         <td>$321.33</td>
